--- a/style.css
+++ b/style.css
@@ -1,3 +1,69 @@
-head {
+body {
+    font-family: 'roboto', Arial, sans-serif;
+    background-color: #1f2937;
+    padding: 0px;
+    margin: 0px;
+}
+.container {
     display: flex;
+    flex-direction: column;
+}
+
+/* Nav bar */
+
+nav {
+    display: flex;
+    justify-content: space-around;
+    color: #f9faf8;
+    font-size: 18px;
+    align-items: center;
+}
+ul {
+    list-style: none;
+    display: flex;
+    padding: 0px;
+    margin: 0px;
+    gap: 8px;
+}
+a {
+    text-decoration: none;
+    color: #e5e7eb;
+}
+.left,
+.right {
+    padding: 12px;
+}
+
+/* Hero */
+.hero {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.hero h1 {
+    color: #f9faf8;
+    font-size: 48px;
+    font-weight: 900;
+    margin: 0px;
+}
+.hero p {
+    color: #e5e7eb;
+    font-size: 18px;
+    margin: 0px
+}
+.hero-btn{
+    margin-top: 10px;
+    border-radius: 3px;
+    border-style: none;
+    background-color: #3882f6;
+    color: #f9faf8;
+    padding: 4px 16px;
+    font-weight: 900;
+}
+img{
+    width: auto;
+    height: 300px;
+}
+.hero {
+    padding: 100px;
 }
